--- a/Other/help/de/regexp.html
+++ b/Other/help/de/regexp.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Yapbam Hilfe: Reguläre Ausdrücke</title>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Yapbam Hilfe: RegulÃ¤re AusdrÃ¼cke</title>
 </head>
 <body>
 <h1>Yapbam Hilfe</h1>
 <hr style="width: 100%; height: 2px;">
-<h2>Reguläre Ausdrücke</h2>
-<p>Ein Regulärer Ausdruck ist ein Muster, das mögliche Zeichen in einer Zeichenfolge beschreibt. Er hat eine sehr präzise und komplexe Syntax, die in der Dokumentation von Sun beschrieben ist (im Abschnitt <a href="#External_links" title="">Externe Links</a>).
+<h2>RegulÃ¤re AusdrÃ¼cke</h2>
+<p>Ein RegulÃ¤rer Ausdruck ist ein Muster, das mÃ¶gliche Zeichen in einer Zeichenfolge beschreibt. Er hat eine sehr prÃ¤zise und komplexe Syntax, die in der Dokumentation von Sun beschrieben ist (im Abschnitt <a href="#External_links" title="">Externe Links</a>).
 </p>
 <a name="Syntax"></a><h3> <span class="mw-headline"> Hier einige Bestandteile der Syntax&nbsp;: </span></h3>
 <ul><li> Quanitfizierer:
@@ -23,14 +24,14 @@
 </li><li> \d: eine Ziffer [0-9].
 </li></ul>
 </li></ul>
-<a name="Examples"></a><h3> <span class="mw-headline"> Hier einige Beispiele, die hilfreich sein können&nbsp;: </span></h3>
+<a name="Examples"></a><h3> <span class="mw-headline"> Hier einige Beispiele, die hilfreich sein kÃ¶nnen&nbsp;: </span></h3>
 <ul><li> start.*&nbsp;: alle Zeichenfolgen, die mit "start" beginnen.
 </li><li> .*end$&nbsp;: alle Zeichenfolgen, die mit "end" enden.
 </li><li> .*\d+&nbsp;: alle Zeichenfolgen, die Ziffern enthalten.
 </li></ul>
 
 <a name="External_links" id="External_links"></a><h2> <span class="mw-headline"> Externe Links </span></h2>
-<ul><li><a href="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" class="external text" title="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" rel="nofollow">Sun Dokumentation zu Regulären Ausdrücken in Java</a>
-</li><li><a href="http://en.wikipedia.org/wiki/Regular_expression" class="extiw" title="wikipedia:Regular expression"> Wikipedia-Seite zu Regulären Ausdrücken</a>
+<ul><li><a href="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" class="external text" title="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" rel="nofollow">Sun Dokumentation zu RegulÃ¤ren AusdrÃ¼cken in Java</a>
+</li><li><a href="http://en.wikipedia.org/wiki/Regular_expression" class="extiw" title="wikipedia:Regular expression"> Wikipedia-Seite zu RegulÃ¤ren AusdrÃ¼cken</a>
 </li></ul>
 </body></html>
