--- a/Other/help/fr/import.html
+++ b/Other/help/fr/import.html
@@ -1,40 +1,41 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Aide de Yapbam : Expressions régulières</title>
-
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Aide de Yapbam : Expressions rÃ©guliÃ¨res</title>
 </head>
 <body>
 <h1>Yapbam : Aide</h1>
 <hr style="width: 100%; height: 2px;">
 <h2>Importation</h2>
-<p>Yapbam permet de récupérer les données exportées au format
+<p>Yapbam permet de rÃ©cupÃ©rer les donnÃ©es exportÃ©es au format
 texte depuis un
 autre gestionnaire de compte bancaire ou encore depuis un tableur
 (comme Excel ou Open Office Calc).</p>
 <h3><span class="mw-headline">Comment sont
-distinguées les opérations, les sous-opérations et le solde initial des
+distinguÃ©es les opÃ©rations, les sous-opÃ©rations et le solde initial des
 comptes :</span></h3>
 <ul>
 <li>Toute&nbsp;ligne contenant une valeur dans la colonne
-des dates est considérée comme une opération.</li>
+des dates est considÃ©rÃ©e comme une opÃ©ration.</li>
 <li>Les
-autres lignes sont des sous-opérations si elles suivent une opération,
-ou un solde initial de compte si elles sont situées avant la première
-opération dans le fichier.</li>
+autres lignes sont des sous-opÃ©rations si elles suivent une opÃ©ration,
+ou un solde initial de compte si elles sont situÃ©es avant la premiÃ¨re
+opÃ©ration dans le fichier.</li>
 <li>Si la colonne "Compte" d'une ligne de solde initial est
-vide, le solde est attaché au compte par défaut.</li>
+vide, le solde est attachÃ© au compte par dÃ©faut.</li>
 <li>Si un compte a plusieurs lignes "solde initial", le solde
 initial du compte sera la somme de ces lignes.</li>
 </ul>
 <h3>Format des dates :</h3>
-Le format des dates dépend du pays et de la langue de Yapbam.<br>
+Le format des dates dÃ©pend du pays et de la langue de Yapbam.<br>
 Ce
-format est le format court de représentation des dates. Par exemple, en
-France, les dates doivent être représentées dans
+format est le format court de reprÃ©sentation des dates. Par exemple, en
+France, les dates doivent Ãªtre reprÃ©sentÃ©es dans
 format&nbsp;"JJ/MM/AA"
 <h3>Format des montants :</h3>
-Le format des montants dépend du pays et de la langue de Yapbam.<br>
-Le séparateur entre les parties entière et décimale d'un nombre est,
-par exemple, la virgule en France, le point aux États-Unis.<br>
-Yapbam tolère que le symbole de la monnaie du pays soit inclus ou pas
+Le format des montants dÃ©pend du pays et de la langue de Yapbam.<br>
+Le sÃ©parateur entre les parties entiÃ¨re et dÃ©cimale d'un nombre est,
+par exemple, la virgule en France, le point aux Ã‰tats-Unis.<br>
+Yapbam tolÃ¨re que le symbole de la monnaie du pays soit inclus ou pas
 dans les montants.<br>
 </body></html>
