--- a/Yapbam/Other/help/fr/regexp.html
+++ b/Yapbam/Other/help/fr/regexp.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Aide de Yapbam : Expressions régulières</title></head><body>
+<html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Aide de Yapbam : Expressions rÃ©guliÃ¨res</title></head><body>
 <h1>Yapbam : Aide</h1>
 <hr style="width: 100%; height: 2px;">
-<h2>Les expressions régulières</h2>
-<p>Une expression régulière est un motif qui décrit un ensemble
-de chaines de caractères. Ces motifs ont une syntaxe très précise et,
+<h2>Les expressions rÃ©guliÃ¨res</h2>
+<p>Une expression rÃ©guliÃ¨re est un motif qui dÃ©crit un ensemble
+de chaines de caractÃ¨res. Ces motifs ont une syntaxe trÃ¨s prÃ©cise et,
 il faut bien le dire, assez complexe. Vous pourrez la trouver plus bas
 dans la documentation de Sun (dans la section <a href="#Liens_externes" title="">lien externes</a>).
 </p>
 <a name="syntaxe"></a>
 <h3><span class="mw-headline">&nbsp;Ci-dessous
-quelques éléments
+quelques Ã©lÃ©ments
 de la syntaxe&nbsp;: </span></h3>
 <ul>
 <li> Quantificateurs:
@@ -26,15 +28,15 @@ X.
 </li>
 <li> Position:
 <ul>
-<li> ^&nbsp;: Le début de la chaine.
+<li> ^&nbsp;: Le dÃ©but de la chaine.
 </li>
 <li> $&nbsp;: La fin de la chaine.
 </li>
 </ul>
 </li>
-<li> Classes de caractères:
+<li> Classes de caractÃ¨res:
 <ul>
-<li> .&nbsp;: N'importe quel caractère.
+<li> .&nbsp;: N'importe quel caractÃ¨re.
 </li>
 <li> \d&nbsp;: Un chiffre [0-9].
 </li>
@@ -44,7 +46,7 @@ X.
 <a name="Exemples"></a>
 <h3><span class="mw-headline">&nbsp;Ci-dessous
 quelques exemples
-qui peuvent être utiles&nbsp;: </span></h3>
+qui peuvent Ãªtre utiles&nbsp;: </span></h3>
 <ul>
 <li> xyz.*&nbsp;: Toutes les chaines qui commencent par
 "xyz".
@@ -61,9 +63,9 @@ moins un chiffre.
 <h2><span class="mw-headline">&nbsp;Liens externes </span></h2>
 <ul>
 <li><a href="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" class="external text" title="http://java.sun.com/javase/6/docs/api/java/util/regex/Pattern.html" rel="nofollow">Documentation de Sun sur les expressions
-régulières de Java</a>
+rÃ©guliÃ¨res de Java</a>
 </li>
-<li><a href="http://fr.wikipedia.org/wiki/Expression_rationnelle" class="external text" title="http://fr.wikipedia.org/wiki/Expression_rationnelle" rel="nofollow">Page Wikipedia sur les expressions regulières</a>
+<li><a href="http://fr.wikipedia.org/wiki/Expression_rationnelle" class="external text" title="http://fr.wikipedia.org/wiki/Expression_rationnelle" rel="nofollow">Page Wikipedia sur les expressions reguliÃ¨res</a>
 </li>
 </ul>
 </body></html>
